# dna-big-data

./: .env.example  .gitignore  README.md  prefect.yaml  pyproject.toml  requirements.txt
automations/: __init__.py
automations/future_automation_01/: automation.py
automations/future_automation_02/: __init__.py  automation.py
automations/midas_access_etl/: README.md  SQUEMA.SQL  __init__.py  automation.py  backfill.py  config.py  constants.py  exceptions.py  flow.py  schemas.py
automations/midas_access_etl/analytics/: __init__.py  aggregations.py  indicators.py
automations/midas_access_etl/extract/: __init__.py  access_query.py  auth.py  client.py  extractor.py  filters.py
docker/: Dockerfile  docker-compose.yml
docs/: como-executar-o-projeto.md  fluxo-do-projeto.md
orchestrator/flows/: __init__.py  automation_registry.py  main.py  orchestrator.py
orchestrator/schedules/: __init__.py  daily.py  deployment.py
orchestrator/workers/: __init__.py  local_worker.py
scripts/: run_backfill.py  serve_prefect.py
shared/config/: settings.py
shared/database/: delta_lake.py  execution_repository.py  storage.py  supabase_lake.py  supabase_repository.py
shared/logging/: json_logger.py  sentry.py
shared/notifications/: notifier.py
shared/utils/: __init__.py  contracts.py  models.py  pipeline.py
tests/: test_automation_registry.py  test_midas_access_analytics.py  test_midas_access_etl.py  test_midas_access_transform.py  test_midas_backfill.py  test_midas_extractor_session.py  test_midas_run_params.py  test_orchestrator.py
(+16 files in other folders)
