[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dna-big-data"
version = "0.1.0"
description = "Plataforma modular de automação e processamento de dados com Prefect, Supabase e arquitetura orientada a domínio."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "prefect>=3.0.0",
  "pandas>=2.2.0",
  "polars>=1.0.0",
  "playwright>=1.46.0",
  "supabase>=2.6.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sentry-sdk>=2.10.0",
  "structlog>=24.1.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*", "automations*", "shared*"]
exclude = ["src*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
